2004-07-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sak.tcl: Support critcl implementation of rc4.
	* modules/tcllibc.tcl: Increment version to 0.2.0.

2004-07-02  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* installed_modules.tcl: NEW MODULE: rc4

2004-06-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* installed_modules.tcl: Added module 'bee'.

	* New module for  de- and encoding data using the bittorrent
	  serialization format.

2004-05-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* installed_modules.tcl: remove struct1 module.
	
2004-05-23  Andreas Kupries  <andreask@activestate.com>

	* tcllib_version.tcl: Changed version in main line to distinguish
	  it from the 1.6 branch and the release coming up in it.

2004-05-07  Andreas Kupries  <andreask@activestate.com>

	* New module for querying JPEG images, and manipulating their
	  comments.

	* New module: PNG querying and manipulation.

2004-05-04  Andreas Kupries  <andreask@activestate.com>

	* install_action.tcl: Fixed [SF Tcllib Bug 784519]. Loading the
	  proper doctools directly, and not using the package system. The
	  latter may get confused and try to load the wrong (old) package.

2004-04-27  Andreas Kupries  <andreask@activestate.com>

	* installed_modules.tcl: Added new module.
	* examples/ldap:
	* modules/ldap: New module: LDAP client. Provided to us by Joechen
	  Loewer <loewerj@web.de>.
	
2004-04-16  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* sak.tcl: Some mods to the critcl build code for use under
	Windows. If it cannot find critcl.kit, then use env(CRITCL) for
	the location of the kit file.

2004-03-09  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* examples/csv/csv2html.orig:		Unified the startup header of all
	* examples/csv/csvcut.orig:		applications, using suggestions
	* examples/csv/csvdiff.orig:		made by Stuart Cassoff <stwo@telus.net>.
	* examples/csv/csvjoin.orig:
	* examples/csv/csvsort.orig:
	* examples/csv/csvuniq.orig: