@@ -1,0 +1,8 @@
+# pkgIndex.tcl - 
+#
+# uuid package index file
+#
+# $Id: pkgIndex.tcl,v 1.1 2004/07/08 01:26:29 patthoyts Exp $
+
+if {![package vsatisfies [package provide Tcl] 8.2]} {return}
+package ifneeded uuid 1.0.0 [list source [file join $dir uuid.tcl]]
