@@ -1,0 +1,66 @@
+# uuid.test:  tests for the uuid package                       -*- tcl -*-
+#
+# $Id: uuid.test,v 1.1 2004/07/08 01:26:29 patthoyts Exp $
+
+# -------------------------------------------------------------------------
+# Initialize the test package
+#
+if {[lsearch [namespace children] ::tcltest] == -1} {
+    package require tcltest
+    namespace import ::tcltest::*
+}
+
+# -------------------------------------------------------------------------
+# Ensure we test _this_ local copy and one installed somewhere else.
+#
+package forget uuid
+catch {namespace delete ::uuid}
+if {[catch {source [file join [file dirname [info script]] uuid.tcl]} msg]} {
+    puts "skipped [file tail [info script]]: $msg"
+    return
+}
+
+# -------------------------------------------------------------------------
+# Setup any constraints
+#
+
+# -------------------------------------------------------------------------
+# Now the package specific tests....
+# -------------------------------------------------------------------------
+
+puts "- uuid [package present uuid]"
+
+# -------------------------------------------------------------------------
+
+test uuid-1.0 {uuid requires args} {
+    list [catch {uuid::uuid} msg]
+} {1}
+
+test uuid-1.1 {uuid generate should create a 36 char string uuid} {
+    list [catch {string length [uuid::uuid generate]} msg] $msg
+} {0 36}
+
+test uuid-1.2 {uuid comparison of uuid with self should be zero} {
+    list [catch {
+        set a [uuid::uuid generate]
+        uuid::uuid compare $a $a
+    } msg] $msg
+} {0 0}
+
+test uuid-1.3 {uuid comparison of two uuids should be non-zero} {
+    list [catch {
+        set a [uuid::uuid generate]
+        set b [uuid::uuid generate]
+        expr {[uuid::uuid compare $a $b] == 0}
+    } msg] $msg
+} {0 0}
+
+# -------------------------------------------------------------------------
+
+::tcltest::cleanupTests
+
+# -------------------------------------------------------------------------
+# Local Variables:
+#   mode: tcl
+#   indent-tabs-mode: nil
+# End:
